--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Base template to develop LLM apps on the cloud"
 readme = "README.md"
 authors = ["Suraj M S"]
-requires-python = ">=3.12"
+requires-python = "==3.12.*"
 dependencies = [
     "open-webui>=0.6.5",
 ]
